--- a/styles.css
+++ b/styles.css
@@ -5,44 +5,160 @@
     padding: 0;
 }
 
+/* Div que contiene todos los elementos del body */
 .container {
-    background-image: url("images/wallpaper-pokemonsTypes.jpg");
+    background: url("images/background2.jpg") fixed center top;
+    background-size: cover;
     background-attachment: fixed;
     font-family: 'Raleway', sans-serif;
 }
 
-#pokeweb {
+.logo {
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+    width: 400px;
+    height: 400px;
 }
 
+.logo__pokemon{
+    max-width: 100%;
+    max-height: 100%;
+    justify-content: center;
+}
 
-.types {
+.search {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+
+#search-input {
+    border-radius: 10px;
+    padding: 10px;
+    width: 250px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.type {
     display: flex;
     flex-wrap: wrap;
     cursor: pointer;
+    grid-row: auto;
+    justify-content:space-around;
 }
 
 .type__selector {
-    padding: 24px;
-    border: 2px solid black;
+    padding: 20px;
+    border: 1px solid black;
+    border-radius: 20px;
+    grid-template-columns: repeat( 5, 1fr);
     margin-right: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
     cursor: pointer;
+    text-align: center;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.type__selector--all {
+    background-color: #ffffff;
+}
+
+.type__selector--fire{
+    background-color: #f8955c;
+}
+
+.type__selector--grass{
+    background-color: #93d17a;
+}
+
+.type__selector--water{
+    background-color: #93beef;
+}
+
+.type__selector--flying{
+    background-color: #f4ade7;
+}
+
+.type__selector--electric{
+    background-color: #f8e69f;
+}
+
+.type__selector--ground{
+    background-color: #ab928e;
+}
+
+.type__selector--rock{
+    background-color: #a09f9f;
+}
+
+.type__selector--fairy{
+    background-color: #e191fb;
+}
+
+.type__selector--bug{
+    background-color: #a9fdbd;
+}
+
+.type__selector--poison{
+    background-color: #c5c2c1;
+}
+
+.type__selector--dragon{
+    background-color: #e191fb;
+}
+
+.type__selector--psychic{
+    background-color: #fb91d2;
+}
+
+.type__selector--fighting{
+    background-color: #d66d6d;
+}
+
+.type__selector--normal{
+    background-color: #bf9f8d;
+}
+
+.type__selector--ghost{
+    background-color: #a276b1;
+}
+
+.type__selector--steel{
+    background-color: #92c8a1;
+}
+
+.type__selector--ice{
+    background-color: #b6defe;
+}
+
+.type__selector--dark{
+    background-color: #a493aa;
+}
+
+#pokeweb {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 50px;
+    justify-content: center;
+    align-content: center;
+    margin-top: 80px;
 }
 
 .type__container {
     padding: 5px;
-    border-radius: 10px;
+    border-radius: 5px;
     margin-bottom: 15px;
-    /* margin-right: 20px; */
     margin-block: 20%;
     text-align: center;
-    /* opacity: 100%; */
+    font-weight: bold;
+    text-transform: uppercase;
 }
 
 .type__container--all {
-    background-color: #73f3ed;
+    background-color: #ffffff;
 }
 
 .type__container--fire{
@@ -118,10 +234,34 @@
 }
 
 .card__container {
-    /* background-image: url("images/pokeball.png"); */
-    max-width: 1200px;
+    max-width: 300px;
     margin: 5px;
     background-color: rgb(249, 253, 255);
-    border-color: black;
-    border-radius: 10%;
+    border-radius: 5%;
 }
+
+.img__container > img{
+    width: 150px;
+    height: 150px;
+    justify-content: center;
+}
+.id__container {
+    text-align: center;
+    font-weight: bold;
+    text-transform: uppercase
+}
+
+.nameType__container {
+    margin-top: 10px;
+    text-align: center;
+    font-weight: bold;
+    text-transform: uppercase
+}
+
+/* .name__container{
+    
+}
+
+.divType__container {
+    
+} */
